essl/compiler/glslang/MachineIndependent/glslang.output
State 309 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 variable_identifier: IDENTIFIER

    2 primary_expression: variable_identifier
    3                   | INTCONSTANT
    4                   | FLOATCONSTANT
    5                   | BOOLCONSTANT
    6                   | LEFT_PAREN expression RIGHT_PAREN

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_BRACKET integer_expression RIGHT_BRACKET
    9                   | function_call
   10                   | postfix_expression DOT FIELD_SELECTION
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 integer_expression: expression

   14 function_call: function_call_or_method

   15 function_call_or_method: function_call_generic
   16                        | postfix_expression DOT function_call_generic

   17 function_call_generic: function_call_header_with_parameters RIGHT_PAREN
   18                      | function_call_header_no_parameters RIGHT_PAREN

   19 function_call_header_no_parameters: function_call_header VOID_TYPE
   20                                   | function_call_header

   21 function_call_header_with_parameters: function_call_header assignment_expression
   22                                     | function_call_header_with_parameters COMMA assignment_expression

   23 function_call_header: function_identifier LEFT_PAREN

   24 function_identifier: type_specifier
   25                    | IDENTIFIER
   26                    | FIELD_SELECTION

   27 unary_expression: postfix_expression
   28                 | INC_OP unary_expression
   29                 | DEC_OP unary_expression
   30                 | unary_operator unary_expression

   31 unary_operator: PLUS
   32               | DASH
   33               | BANG
   34               | TILDE

   35 multiplicative_expression: unary_expression
   36                          | multiplicative_expression STAR unary_expression
   37                          | multiplicative_expression SLASH unary_expression
   38                          | multiplicative_expression PERCENT unary_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression DASH multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_OP additive_expression
   44                 | shift_expression RIGHT_OP additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LEFT_ANGLE shift_expression
   47                      | relational_expression RIGHT_ANGLE shift_expression
   48                      | relational_expression LE_OP shift_expression
   49                      | relational_expression GE_OP shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ_OP relational_expression
   52                    | equality_expression NE_OP relational_expression

   53 and_expression: equality_expression
   54               | and_expression AMPERSAND equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression CARET and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression VERTICAL_BAR exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression AND_OP inclusive_or_expression

   61 logical_xor_expression: logical_and_expression
   62                       | logical_xor_expression XOR_OP logical_and_expression

   63 logical_or_expression: logical_xor_expression
   64                      | logical_or_expression OR_OP logical_xor_expression

   65 conditional_expression: logical_or_expression
   66                       | logical_or_expression QUESTION expression COLON assignment_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: EQUAL
   70                    | MUL_ASSIGN
   71                    | DIV_ASSIGN
   72                    | MOD_ASSIGN
   73                    | ADD_ASSIGN
   74                    | SUB_ASSIGN
   75                    | LEFT_ASSIGN
   76                    | RIGHT_ASSIGN
   77                    | AND_ASSIGN
   78                    | XOR_ASSIGN
   79                    | OR_ASSIGN

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: function_prototype SEMICOLON
   84            | init_declarator_list SEMICOLON
   85            | PRECISION precision_qualifier type_specifier_nonarray_no_prec SEMICOLON

   86 function_prototype: function_declarator RIGHT_PAREN

   87 function_declarator: function_header
   88                    | function_header_with_parameters

   89 function_header_with_parameters: function_header parameter_declaration
   90                                | function_header_with_parameters COMMA parameter_declaration

   91 function_header: fully_specified_type IDENTIFIER LEFT_PAREN

   92 parameter_declarator: type_specifier IDENTIFIER
   93                     | type_specifier IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET

   94 parameter_declaration: type_qualifier parameter_qualifier parameter_declarator
   95                      | parameter_qualifier parameter_declarator
   96                      | type_qualifier parameter_qualifier parameter_type_specifier
   97                      | parameter_qualifier parameter_type_specifier

   98 parameter_qualifier: /* empty */
   99                    | IN_QUAL
  100                    | OUT_QUAL
  101                    | INOUT_QUAL

  102 parameter_type_specifier: type_specifier

  103 init_declarator_list: single_declaration
  104                     | init_declarator_list COMMA IDENTIFIER
  105                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
  106                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET
  107                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET EQUAL initializer
  108                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET EQUAL initializer
  109                     | init_declarator_list COMMA IDENTIFIER EQUAL initializer

  110 single_declaration: fully_specified_type
  111                   | fully_specified_type IDENTIFIER
  112                   | fully_specified_type IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
  113                   | fully_specified_type IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET
  114                   | fully_specified_type IDENTIFIER LEFT_BRACKET RIGHT_BRACKET EQUAL initializer
  115                   | fully_specified_type IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET EQUAL initializer
  116                   | fully_specified_type IDENTIFIER EQUAL initializer
  117                   | INVARIANT IDENTIFIER

  118 fully_specified_type: type_specifier
  119                     | type_qualifier type_specifier

  120 type_qualifier: CONST_QUAL
  121               | ATTRIBUTE
  122               | VARYING
  123               | INVARIANT VARYING
  124               | UNIFORM

  125 type_specifier: type_specifier_nonarray
  126               | type_specifier_nonarray LEFT_BRACKET constant_expression RIGHT_BRACKET

  127 type_specifier_nonarray: type_specifier_nonarray_no_prec
  128                        | precision_qualifier type_specifier_nonarray_no_prec

  129 type_specifier_nonarray_no_prec: VOID_TYPE
  130                                | FLOAT_TYPE
  131                                | INT_TYPE
  132                                | BOOL_TYPE
  133                                | VEC2
  134                                | VEC3
  135                                | VEC4
  136                                | BVEC2
  137                                | BVEC3
  138                                | BVEC4
  139                                | IVEC2
  140                                | IVEC3
  141                                | IVEC4
  142                                | MATRIX2
  143                                | MATRIX3
  144                                | MATRIX4
  145                                | SAMPLER1D
  146                                | SAMPLER2D
  147                                | SAMPLER3D
  148                                | SAMPLERCUBE
  149                                | SAMPLER1DSHADOW
  150                                | SAMPLER2DSHADOW
  151                                | SAMPLERRECTARB
  152                                | SAMPLERRECTSHADOWARB
  153                                | struct_specifier
  154                                | TYPE_NAME

  155 precision_qualifier: HIGH_PRECISION
  156                    | MEDIUM_PRECISION
  157                    | LOW_PRECISION

  158 struct_specifier: STRUCT IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
  159                 | STRUCT LEFT_BRACE struct_declaration_list RIGHT_BRACE

  160 struct_declaration_list: struct_declaration
  161                        | struct_declaration_list struct_declaration

  162 struct_declaration: type_specifier struct_declarator_list SEMICOLON

  163 struct_declarator_list: struct_declarator
  164                       | struct_declarator_list COMMA struct_declarator

  165 struct_declarator: IDENTIFIER
  166                  | IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET

  167 initializer: assignment_expression

  168 declaration_statement: declaration

  169 statement: compound_statement
  170          | simple_statement

  171 simple_statement: declaration_statement
  172                 | expression_statement
  173                 | selection_statement
  174                 | iteration_statement
  175                 | jump_statement

  176 compound_statement: LEFT_BRACE RIGHT_BRACE

  177 @1: /* empty */

  178 @2: /* empty */

  179 compound_statement: LEFT_BRACE @1 statement_list @2 RIGHT_BRACE

  180 statement_no_new_scope: compound_statement_no_new_scope
  181                       | simple_statement

  182 compound_statement_no_new_scope: LEFT_BRACE RIGHT_BRACE
  183                                | LEFT_BRACE statement_list RIGHT_BRACE

  184 statement_list: statement
  185               | statement_list statement

  186 expression_statement: SEMICOLON
  187                     | expression SEMICOLON

  188 selection_statement: IF LEFT_PAREN expression RIGHT_PAREN selection_rest_statement

  189 selection_rest_statement: statement ELSE statement
  190                         | statement

  191 condition: expression
  192          | fully_specified_type IDENTIFIER EQUAL initializer

  193 @3: /* empty */

  194 iteration_statement: WHILE LEFT_PAREN @3 condition RIGHT_PAREN statement_no_new_scope

  195 @4: /* empty */

  196 iteration_statement: DO @4 statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON

  197 @5: /* empty */

  198 iteration_statement: FOR LEFT_PAREN @5 for_init_statement for_rest_statement RIGHT_PAREN statement_no_new_scope

  199 for_init_statement: expression_statement
  200                   | declaration_statement

  201 conditionopt: condition
  202             | /* empty */

  203 for_rest_statement: conditionopt SEMICOLON
  204                   | conditionopt SEMICOLON expression

  205 jump_statement: CONTINUE SEMICOLON
  206               | BREAK SEMICOLON
  207               | RETURN SEMICOLON
  208               | RETURN expression SEMICOLON
  209               | DISCARD SEMICOLON

  210 translation_unit: external_declaration
  211                 | translation_unit external_declaration

  212 external_declaration: function_definition
  213                     | declaration

  214 @6: /* empty */

  215 function_definition: function_prototype @6 compound_statement_no_new_scope


Terminals, with rules where they appear

$end (0) 0
error (256)
ATTRIBUTE (258) 121
CONST_QUAL (259) 120
BOOL_TYPE (260) 132
FLOAT_TYPE (261) 130
INT_TYPE (262) 131
BREAK (263) 206
CONTINUE (264) 205
DO (265) 196
ELSE (266) 189
FOR (267) 198
IF (268) 188
DISCARD (269) 209
RETURN (270) 207 208
BVEC2 (271) 136
BVEC3 (272) 137
BVEC4 (273) 138
IVEC2 (274) 139
IVEC3 (275) 140
IVEC4 (276) 141
VEC2 (277) 133
VEC3 (278) 134
VEC4 (279) 135
MATRIX2 (280) 142
MATRIX3 (281) 143
MATRIX4 (282) 144
IN_QUAL (283) 99
OUT_QUAL (284) 100
INOUT_QUAL (285) 101
UNIFORM (286) 124
VARYING (287) 122 123
STRUCT (288) 158 159
VOID_TYPE (289) 19 129
WHILE (290) 194 196
SAMPLER1D (291) 145
SAMPLER2D (292) 146
SAMPLER3D (293) 147
SAMPLERCUBE (294) 148
SAMPLER1DSHADOW (295) 149
SAMPLER2DSHADOW (296) 150
SAMPLERRECTARB (297) 151
SAMPLERRECTSHADOWARB (298) 152
LOW_PRECISION (299) 157
MEDIUM_PRECISION (300) 156
HIGH_PRECISION (301) 155
INVARIANT (302) 117 123
PRECISION (303) 85
IDENTIFIER (304) 1 25 91 92 93 104 105 106 107 108 109 111 112 113
    114 115 116 117 158 165 166 192
TYPE_NAME (305) 154
FLOATCONSTANT (306) 4
INTCONSTANT (307) 3
BOOLCONSTANT (308) 5
FIELD_SELECTION (309) 10 26
LEFT_OP (310) 43
RIGHT_OP (311) 44
INC_OP (312) 11 28
DEC_OP (313) 12 29
LE_OP (314) 48
GE_OP (315) 49
EQ_OP (316) 51
NE_OP (317) 52
AND_OP (318) 60
OR_OP (319) 64
XOR_OP (320) 62
MUL_ASSIGN (321) 70
DIV_ASSIGN (322) 71
ADD_ASSIGN (323) 73
MOD_ASSIGN (324) 72
LEFT_ASSIGN (325) 75
RIGHT_ASSIGN (326) 76
AND_ASSIGN (327) 77
XOR_ASSIGN (328) 78
OR_ASSIGN (329) 79
SUB_ASSIGN (330) 74
LEFT_PAREN (331) 6 23 91 188 194 196 198
RIGHT_PAREN (332) 6 17 18 86 188 194 196 198
LEFT_BRACKET (333) 8 93 105 106 107 108 112 113 114 115 126 166
RIGHT_BRACKET (334) 8 93 105 106 107 108 112 113 114 115 126 166
LEFT_BRACE (335) 158 159 176 179 182 183
RIGHT_BRACE (336) 158 159 176 179 182 183
DOT (337) 10 16
COMMA (338) 22 81 90 104 105 106 107 108 109 164
COLON (339) 66
EQUAL (340) 69 107 108 109 114 115 116 192
SEMICOLON (341) 83 84 85 162 186 187 196 203 204 205 206 207 208 209
BANG (342) 33
DASH (343) 32 41
TILDE (344) 34
PLUS (345) 31 40
STAR (346) 36
SLASH (347) 37
PERCENT (348) 38
LEFT_ANGLE (349) 46
RIGHT_ANGLE (350) 47
VERTICAL_BAR (351) 58
CARET (352) 56
AMPERSAND (353) 54
QUESTION (354) 66


Nonterminals, with rules where they appear

$accept (100)
    on left: 0
variable_identifier (101)
    on left: 1, on right: 2
primary_expression (102)
    on left: 2 3 4 5 6, on right: 7
postfix_expression (103)
    on left: 7 8 9 10 11 12, on right: 8 10 11 12 16 27
integer_expression (104)
    on left: 13, on right: 8
function_call (105)
    on left: 14, on right: 9
function_call_or_method (106)
    on left: 15 16, on right: 14
function_call_generic (107)
    on left: 17 18, on right: 15 16
function_call_header_no_parameters (108)
    on left: 19 20, on right: 18
function_call_header_with_parameters (109)
    on left: 21 22, on right: 17 22
function_call_header (110)
    on left: 23, on right: 19 20 21
function_identifier (111)
    on left: 24 25 26, on right: 23
unary_expression (112)
    on left: 27 28 29 30, on right: 28 29 30 35 36 37 38 68
unary_operator (113)
    on left: 31 32 33 34, on right: 30
multiplicative_expression (114)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (115)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (116)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (117)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (118)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (119)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (120)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (121)
    on left: 57 58, on right: 58 59 60
logical_and_expression (122)
    on left: 59 60, on right: 60 61 62
logical_xor_expression (123)
    on left: 61 62, on right: 62 63 64
logical_or_expression (124)
    on left: 63 64, on right: 64 65 66
conditional_expression (125)
    on left: 65 66, on right: 67 82
assignment_expression (126)
    on left: 67 68, on right: 21 22 66 68 80 81 167
assignment_operator (127)
    on left: 69 70 71 72 73 74 75 76 77 78 79, on right: 68
expression (128)
    on left: 80 81, on right: 6 13 66 81 187 188 191 196 204 208
constant_expression (129)
    on left: 82, on right: 93 106 108 113 115 126 166
declaration (130)
    on left: 83 84 85, on right: 168 213
function_prototype (131)
    on left: 86, on right: 83 215
function_declarator (132)
    on left: 87 88, on right: 86
function_header_with_parameters (133)
    on left: 89 90, on right: 88 90
function_header (134)
    on left: 91, on right: 87 89
parameter_declarator (135)
    on left: 92 93, on right: 94 95
parameter_declaration (136)
    on left: 94 95 96 97, on right: 89 90
parameter_qualifier (137)
    on left: 98 99 100 101, on right: 94 95 96 97
parameter_type_specifier (138)
    on left: 102, on right: 96 97
init_declarator_list (139)
    on left: 103 104 105 106 107 108 109, on right: 84 104 105 106
    107 108 109
single_declaration (140)
    on left: 110 111 112 113 114 115 116 117, on right: 103
fully_specified_type (141)
    on left: 118 119, on right: 91 110 111 112 113 114 115 116 192
type_qualifier (142)
    on left: 120 121 122 123 124, on right: 94 96 119
type_specifier (143)
    on left: 125 126, on right: 24 92 93 102 118 119 162
type_specifier_nonarray (144)
    on left: 127 128, on right: 125 126
type_specifier_nonarray_no_prec (145)
    on left: 129 130 131 132 133 134 135 136 137 138 139 140 141 142
    143 144 145 146 147 148 149 150 151 152 153 154,
    on right: 85 127 128
precision_qualifier (146)
    on left: 155 156 157, on right: 85 128
struct_specifier (147)
    on left: 158 159, on right: 153
struct_declaration_list (148)
    on left: 160 161, on right: 158 159 161
struct_declaration (149)
    on left: 162, on right: 160 161
struct_declarator_list (150)
    on left: 163 164, on right: 162 164
struct_declarator (151)
    on left: 165 166, on right: 163 164
initializer (152)
    on left: 167, on right: 107 108 109 114 115 116 192
declaration_statement (153)
    on left: 168, on right: 171 200
statement (154)
    on left: 169 170, on right: 184 185 189 190 196
simple_statement (155)
    on left: 171 172 173 174 175, on right: 170 181
compound_statement (156)
    on left: 176 179, on right: 169
@1 (157)
    on left: 177, on right: 179
@2 (158)
    on left: 178, on right: 179
statement_no_new_scope (159)
    on left: 180 181, on right: 194 198
compound_statement_no_new_scope (160)
    on left: 182 183, on right: 180 215
statement_list (161)
    on left: 184 185, on right: 179 183 185
expression_statement (162)
    on left: 186 187, on right: 172 199
selection_statement (163)
    on left: 188, on right: 173
selection_rest_statement (164)
    on left: 189 190, on right: 188
condition (165)
    on left: 191 192, on right: 194 201
iteration_statement (166)
    on left: 194 196 198, on right: 174
@3 (167)
    on left: 193, on right: 194
@4 (168)
    on left: 195, on right: 196
@5 (169)
    on left: 197, on right: 198
for_init_statement (170)
    on left: 199 200, on right: 198
conditionopt (171)
    on left: 201 202, on right: 203 204
for_rest_statement (172)
    on left: 203 204, on right: 198
jump_statement (173)
    on left: 205 206 207 208 209, on right: 175
translation_unit (174)
    on left: 210 211, on right: 0 211
external_declaration (175)
    on left: 212 213, on right: 210 211
function_definition (176)
    on left: 215, on right: 212
@6 (177)
    on left: 214, on right: 215


state 0

    0 $accept: . translation_unit $end

    ATTRIBUTE             shift, and go to state 1
    CONST_QUAL            shift, and go to state 2
    BOOL_TYPE             shift, and go to state 3
    FLOAT_TYPE            shift, and go to state 4
    INT_TYPE              shift, and go to state 5
    BVEC2                 shift, and go to state 6
    BVEC3                 shift, and go to state 7
    BVEC4                 shift, and go to state 8
    IVEC2                 shift, and go to state 9
    IVEC3                 shift, and go to state 10
    IVEC4                 shift, and go to state 11
    VEC2                  shift, and go to state 12
    VEC3                  shift, and go to state 13
    VEC4                  shift, and go to state 14
    MATRIX2               shift, and go to state 15
    MATRIX3               shift, and go to state 16
    MATRIX4               shift, and go to state 17
    UNIFORM               shift, and go to state 18
    VARYING               shift, and go to state 19
    STRUCT                shift, and go to state 20
    VOID_TYPE             shift, and go to state 21
    SAMPLER1D             shift, and go to state 22
    SAMPLER2D             shift, and go to state 23
    SAMPLER3D             shift, and go to state 24
    SAMPLERCUBE           shift, and go to state 25
    SAMPLER1DSHADOW       shift, and go to state 26
    SAMPLER2DSHADOW       shift, and go to state 27
    SAMPLERRECTARB        shift, and go to state 28
    SAMPLERRECTSHADOWARB  shift, and go to state 29
    LOW_PRECISION         shift, and go to state 30
    MEDIUM_PRECISION      shift, and go to state 31
    HIGH_PRECISION        shift, and go to state 32
    INVARIANT             shift, and go to state 33
    PRECISION             shift, and go to state 34
    TYPE_NAME             shift, and go to state 35

    declaration                      go to state 36
    function_prototype               go to state 37
    function_declarator              go to state 38
    function_header_with_parameters  go to state 39
    function_header                  go to state 40
    init_declarator_list             go to state 41
    single_declaration               go to state 42
    fully_specified_type             go to state 43
    type_qualifier                   go to state 44
    type_specifier                   go to state 45
    type_specifier_nonarray          go to state 46
    type_specifier_nonarray_no_prec  go to state 47
    precision_qualifier              go to state 48
    struct_specifier                 go to state 49
    translation_unit                 go to state 50
    external_declaration             go to state 51
    function_definition              go to state 52


state 1

  121 type_qualifier: ATTRIBUTE .

    $default  reduce using rule 121 (type_qualifier)


state 2

  120 type_qualifier: CONST_QUAL .

    $default  reduce using rule 120 (type_qualifier)


state 3

  132 type_specifier_nonarray_no_prec: BOOL_TYPE .

    $default  reduce using rule 132 (type_specifier_nonarray_no_prec)


state 4

  130 type_specifier_nonarray_no_prec: FLOAT_TYPE .

    $default  reduce using rule 130 (type_specifier_nonarray_no_prec)


state 5

  131 type_specifier_nonarray_no_prec: INT_TYPE .

    $default  reduce using rule 131 (type_specifier_nonarray_no_prec)


state 6

  136 type_specifier_nonarray_no_prec: BVEC2 .

    $default  reduce using rule 136 (type_specifier_nonarray_no_prec)


state 7

  137 type_specifier_nonarray_no_prec: BVEC3 .

    $default  reduce using rule 137 (type_specifier_nonarray_no_prec)


state 8

  138 type_specifier_nonarray_no_prec: BVEC4 .

    $default  reduce using rule 138 (type_specifier_nonarray_no_prec)


state 9

  139 type_specifier_nonarray_no_prec: IVEC2 .

    $default  reduce using rule 139 (type_specifier_nonarray_no_prec)


state 10

  140 type_specifier_nonarray_no_prec: IVEC3 .

    $default  reduce using rule 140 (type_specifier_nonarray_no_prec)


state 11

  141 type_specifier_nonarray_no_prec: IVEC4 .

    $default  reduce using rule 141 (type_specifier_nonarray_no_prec)


state 12

  133 type_specifier_nonarray_no_prec: VEC2 .

    $default  reduce using rule 133 (type_specifier_nonarray_no_prec)


state 13

  134 type_specifier_nonarray_no_prec: VEC3 .

    $default  reduce using rule 134 (type_specifier_nonarray_no_prec)


state 14

  135 type_specifier_nonarray_no_prec: VEC4 .

    $default  reduce using rule 135 (type_specifier_nonarray_no_prec)


state 15

  142 type_specifier_nonarray_no_prec: MATRIX2 .

    $default  reduce using rule 142 (type_specifier_nonarray_no_prec)


state 16

  143 type_specifier_nonarray_no_prec: MATRIX3 .

    $default  reduce using rule 143 (type_specifier_nonarray_no_prec)


state 17

  144 type_specifier_nonarray_no_prec: MATRIX4 .

    $default  reduce using rule 144 (type_specifier_nonarray_no_prec)


state 18

  124 type_qualifier: UNIFORM .

    $default  reduce using rule 124 (type_qualifier)


state 19

  122 type_qualifier: VARYING .

    $default  reduce using rule 122 (type_qualifier)


state 20

  158 struct_specifier: STRUCT . IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
  159                 | STRUCT . LEFT_BRACE struct_declaration_list RIGHT_BRACE

    IDENTIFIER  shift, and go to state 53
    LEFT_BRACE  shift, and go to state 54


state 21

  129 type_specifier_nonarray_no_prec: VOID_TYPE .

    $default  reduce using rule 129 (type_specifier_nonarray_no_prec)


state 22

  145 type_specifier_nonarray_no_prec: SAMPLER1D .

    $default  reduce using rule 145 (type_specifier_nonarray_no_prec)


state 23

  146 type_specifier_nonarray_no_prec: SAMPLER2D .

    $default  reduce using rule 146 (type_specifier_nonarray_no_prec)


state 24

  147 type_specifier_nonarray_no_prec: SAMPLER3D .

    $default  reduce using rule 147 (type_specifier_nonarray_no_prec)


state 25

  148 type_specifier_nonarray_no_prec: SAMPLERCUBE .

    $default  reduce using rule 148 (type_specifier_nonarray_no_prec)


state 26

  149 type_specifier_nonarray_no_prec: SAMPLER1DSHADOW .

    $default  reduce using rule 149 (type_specifier_nonarray_no_prec)


state 27

  150 type_specifier_nonarray_no_prec: SAMPLER2DSHADOW .

    $default  reduce using rule 150 (type_specifier_nonarray_no_prec)


state 28

  151 type_specifier_nonarray_no_prec: SAMPLERRECTARB .

    $default  reduce using rule 151 (type_specifier_nonarray_no_prec)


state 29

  152 type_specifier_nonarray_no_prec: SAMPLERRECTSHADOWARB .

    $default  reduce using rule 152 (type_specifier_nonarray_no_prec)


state 30

  157 precision_qualifier: LOW_PRECISION .

    $default  reduce using rule 157 (precision_qualifier)


state 31

  156 precision_qualifier: MEDIUM_PRECISION .

    $default  reduce using rule 156 (precision_qualifier)


state 32

  155 precision_qualifier: HIGH_PRECISION .

    $default  reduce using rule 155 (precision_qualifier)


state 33

  117 single_declaration: INVARIANT . IDENTIFIER
  123 type_qualifier: INVARIANT . VARYING

    VARYING     shift, and go to state 55
    IDENTIFIER  shift, and go to state 56


state 34

   85 declaration: PRECISION . precision_qualifier type_specifier_nonarray_no_prec SEMICOLON

    LOW_PRECISION     shift, and go to state 30
    MEDIUM_PRECISION  shift, and go to state 31
    HIGH_PRECISION    shift, and go to state 32

    precision_qualifier  go to state 57


state 35

  154 type_specifier_nonarray_no_prec: TYPE_NAME .

    $default  reduce using rule 154 (type_specifier_nonarray_no_prec)


state 36

  213 external_declaration: declaration .

    $default  reduce using rule 213 (external_declaration)


state 37

   83 declaration: function_prototype . SEMICOLON
  215 function_definition: function_prototype . @6 compound_statement_no_new_scope

    SEMICOLON  shift, and go to state 58

    $default  reduce using rule 214 (@6)

    @6  go to state 59


state 38

   86 function_prototype: function_declarator . RIGHT_PAREN

    RIGHT_PAREN  shift, and go to state 60


state 39

   88 function_declarator: function_header_with_parameters .
   90 function_header_with_parameters: function_header_with_parameters . COMMA parameter_declaration

    COMMA  shift, and go to state 61

    $default  reduce using rule 88 (function_declarator)


state 40

   87 function_declarator: function_header .
   89 function_header_with_parameters: function_header . parameter_declaration

    ATTRIBUTE   shift, and go to state 1
    CONST_QUAL  shift, and go to state 2
    IN_QUAL     shift, and go to state 62
    OUT_QUAL    shift, and go to state 63
    INOUT_QUAL  shift, and go to state 64
    UNIFORM     shift, and go to state 18
    VARYING     shift, and go to state 19
    INVARIANT   shift, and go to state 65

    RIGHT_PAREN  reduce using rule 87 (function_declarator)
    $default     reduce using rule 98 (parameter_qualifier)

    parameter_declaration  go to state 66
    parameter_qualifier    go to state 67
    type_qualifier         go to state 68


state 41

   84 declaration: init_declarator_list . SEMICOLON
  104 init_declarator_list: init_declarator_list . COMMA IDENTIFIER
  105                     | init_declarator_list . COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
  106                     | init_declarator_list . COMMA IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET
  107                     | init_declarator_list . COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET EQUAL initializer
  108                     | init_declarator_list . COMMA IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET EQUAL initializer
  109                     | init_declarator_list . COMMA IDENTIFIER EQUAL initializer

    COMMA      shift, and go to state 69
    SEMICOLON  shift, and go to state 70


state 42

  103 init_declarator_list: single_declaration .

    $default  reduce using rule 103 (init_declarator_list)


state 43

   91 function_header: fully_specified_type . IDENTIFIER LEFT_PAREN
  110 single_declaration: fully_specified_type .
  111                   | fully_specified_type . IDENTIFIER
  112                   | fully_specified_type . IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
  113                   | fully_specified_type . IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET
  114                   | fully_specified_type . IDENTIFIER LEFT_BRACKET RIGHT_BRACKET EQUAL initializer
  115                   | fully_specified_type . IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET EQUAL initializer
  116                   | fully_specified_type . IDENTIFIER EQUAL initializer

    IDENTIFIER  shift, and go to state 71

    $default  reduce using rule 110 (single_declaration)


state 44

  119 fully_specified_type: type_qualifier . type_specifier

    BOOL_TYPE             shift, and go to state 3
    FLOAT_TYPE            shift, and go to state 4
    INT_TYPE              shift, and go to state 5
    BVEC2                 shift, and go to state 6
    BVEC3                 shift, and go to state 7
    BVEC4                 shift, and go to state 8
    IVEC2                 shift, and go to state 9
    IVEC3                 shift, and go to state 10
    IVEC4                 shift, and go to state 11
    VEC2                  shift, and go to state 12
    VEC3                  shift, and go to state 13
    VEC4                  shift, and go to state 14
    MATRIX2               shift, and go to state 15
    MATRIX3               shift, and go to state 16
    MATRIX4               shift, and go to state 17
    STRUCT                shift, and go to state 20
    VOID_TYPE             shift, and go to state 21
    SAMPLER1D             shift, and go to state 22
    SAMPLER2D             shift, and go to state 23
    SAMPLER3D             shift, and go to state 24
    SAMPLERCUBE           shift, and go to state 25
    SAMPLER1DSHADOW       shift, and go to state 26
    SAMPLER2DSHADOW       shift, and go to state 27
    SAMPLERRECTARB        shift, and go to state 28
    SAMPLERRECTSHADOWARB  shift, and go to state 29
    LOW_PRECISION         shift, and go to state 30
    MEDIUM_PRECISION      shift, and go to state 31
    HIGH_PRECISION        shift, and go to state 32
    TYPE_NAME             shift, and go to state 35

    type_specifier                   go to state 72
    type_specifier_nonarray          go to state 46
    type_specifier_nonarray_no_prec  go to state 47
    precision_qualifier              go to state 48
    struct_specifier                 go to state 49


state 45

  118 fully_specified_type: type_specifier .

    $default  reduce using rule 118 (fully_specified_type)


state 46

  125 type_specifier: type_specifier_nonarray .
  126               | type_specifier_nonarray . LEFT_BRACKET constant_expression RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 73

    $default  reduce using rule 125 (type_specifier)


state 47

  127 type_specifier_nonarray: type_specifier_nonarray_no_prec .

    $default  reduce using rule 127 (type_specifier_nonarray)


state 48

  128 type_specifier_nonarray: precision_qualifier . type_specifier_nonarray_no_prec

    BOOL_TYPE             shift, and go to state 3
    FLOAT_TYPE            shift, and go to state 4
    INT_TYPE              shift, and go to state 5
    BVEC2                 shift, and go to state 6
    BVEC3                 shift, and go to state 7
    BVEC4                 shift, and go to state 8
    IVEC2                 shift, and go to state 9
    IVEC3                 shift, and go to state 10
    IVEC4                 shift, and go to state 11
    VEC2                  shift, and go to state 12
    VEC3                  shift, and go to state 13
    VEC4                  shift, and go to state 14
    MATRIX2               shift, and go to state 15
    MATRIX3               shift, and go to state 16
    MATRIX4               shift, and go to state 17
    STRUCT                shift, and go to state 20
    VOID_TYPE             shift, and go to state 21
    SAMPLER1D             shift, and go to state 22
    SAMPLER2D             shift, and go to state 23
    SAMPLER3D             shift, and go to state 24
    SAMPLERCUBE           shift, and go to state 25
    SAMPLER1DSHADOW       shift, and go to state 26
    SAMPLER2DSHADOW       shift, and go to state 27
    SAMPLERRECTARB        shift, and go to state 28
    SAMPLERRECTSHADOWARB  shift, and go to state 29
    TYPE_NAME             shift, and go to state 35

    type_specifier_nonarray_no_prec  go to state 74
    struct_specifier                 go to state 49


state 49

  153 type_specifier_nonarray_no_prec: struct_specifier .

    $default  reduce using rule 153 (type_specifier_nonarray_no_prec)


state 50

    0 $accept: translation_unit . $end
  211 translation_unit: translation_unit . external_declaration
